tests/ui/never_type/feature-gate-never_type_fallback.stderr
error[E0277]: the trait bound `(): T` is not satisfied
  --> $DIR/feature-gate-never_type_fallback.rs:10:9
   |
LL |     foo(panic!())
   |     --- ^^^^^^^^ the trait `T` is not implemented for `()`
   |     |
   |     required by a bound introduced by this call
   |
help: this trait has no implementations, consider adding one
  --> $DIR/feature-gate-never_type_fallback.rs:7:1
   |
LL | trait T {}
   | ^^^^^^^
note: required by a bound in `foo`
  --> $DIR/feature-gate-never_type_fallback.rs:13:16
   |
LL | fn foo(_: impl T) {}
   |                ^ required by this bound in `foo`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
